# arle

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README.zh-CN.md  ROADMAP.md  setup.sh  skills-lock.json
crates/autograd/: AGENTS.md  Cargo.toml
crates/autograd/examples/: cpu_matmul_backward_microbench.rs  cpu_matmul_m1_dispatch_ab.rs  cpu_matmul_microbench.rs
crates/autograd/src/: backend.rs  backend_cuda.rs  backend_metal.rs  ops.rs  optim.rs  tape.rs  tensor.rs
crates/autograd/src/backend_cuda/: kernels.rs
crates/autograd/src/ops/: activation.rs  attention.rs  broadcast.rs  elementwise.rs  embed.rs  gather.rs  layout.rs  linear_attention.rs  matmul.rs  norm.rs  reduce.rs  rope.rs  softmax.rs
crates/autograd/tests/: test_backend.rs  test_cuda_bf16_frozen_ops.rs  test_cuda_lazy_ops.rs  test_linear_attention.rs
crates/cae/: Cargo.toml
crates/cae/src/: adapter.rs  config.rs  engine.rs  lib.rs  pipeline.rs  registry.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  cae.rs  cae_engine.rs  lib.rs  serve.rs  trace.rs  train_cli.rs  welcome.rs
crates/cuda-kernels/: AGENTS.md  Cargo.toml  build.rs
crates/cuda-kernels/csrc/attention/: arle_flashmla_decode_stubs.cu  decode_attention_quantized.cu  dsv4_flashmla_decode_build_indices.cu  dsv4_fp8_kv_pack.cu  prefill_attention_paged_prep.cu
crates/cuda-kernels/csrc/deepep_sidecar/: protocol.hpp  sidecar_main.cpp
crates/cuda-kernels/csrc/gemm/: deepgemm_bridge_stub.cu  deepgemm_native.cu  dsv4_deepgemm_ops.cu  dsv4_fp8_cache.cu  dsv4_grouped_gemm.cu  marlin_dequant.cuh  marlin_int4_fp8_preprocess.cu  marlin_kernel.cu  marlin_repack.cu  marlin_w4_fp8_kernel.cu  marlin_w4a8_kernel.cu  moe_grouped_gemm.cu  quantized_gemv.cu  quantized_gemv_mma.cu  turboquant_weight_gemv.cu  w4_fp8_activation_quant.cu
crates/cuda-kernels/csrc/kv/: kv_quant.cu
crates/cuda-kernels/csrc/kvcacheio/: transfer.cu
crates/cuda-kernels/csrc/misc/: arle_dtype_convert.cu  arle_flashmla_csa_prep.cu  arle_flashmla_decode_shim.cu  arle_flashmla_shim.cu  dsv4_attention.cu  dsv4_mhc.cu  dsv4_tp_attention_repack.cu  elementwise_basic.cu  gated_delta_rule.cu  gdr_prefill_batch.cu
crates/cuda-kernels/csrc/moe/: deepseek_mask_indices_by_ep.cu  dsv4_route.cu  qwen36_route.cu
crates/cuda-kernels/src/: attention.rs  ffi.rs  kv_quant.rs  kv_types.rs  lib.rs  moe.rs  paged_kv.rs  tensor.rs
crates/cuda-kernels/src/ffi/: attention.rs  elementwise.rs  gemm.rs  kv.rs  misc.rs  moe.rs  recurrent.rs
crates/cuda-kernels/tools/tilelang/: README.md  batch_decode_paged_hd64.py  batch_prefill_paged_hd256.py  gen_tilelang_aot.py
crates/deepep-sys/: Cargo.toml  build.rs
crates/deepep-sys/csrc/: deepep_buffer.cpp  deepep_buffer.hpp
crates/deepep-sys/src/: lib.rs
crates/train/: Cargo.toml
crates/train/examples/: opd_step_cpu_bench.rs  opd_step_cpu_moderate_profile.rs  opd_step_cuda_convergence_bench.rs  opd_step_cuda_infer_teacher_train.rs  opd_step_cuda_moderate_bench.rs  opd_step_cuda_realckpt_diag.rs  opd_step_cuda_realckpt_lora_bench.rs  opd_step_cuda_realckpt_profile.rs  opd_step_cuda_realckpt_train.rs  rollout_last_logits_ab_bench.rs
crates/train/src/: causal_lm.rs  commands.rs  eval_lm.rs  grad_clip.rs  infer_student.rs  lib.rs  lora.rs  loss.rs  model_family.rs  opd.rs  prompts.rs  qwen35.rs  qwen35_checkpoint.rs  qwen35_loader.rs  teacher_infer.rs
crates/train/src/commands/: pretrain.rs  pretrain_dsv4.rs  train_multi_turn.rs
crates/train/tests/: common.rs  test_grad_clip.rs  test_infer_student_lora_sync.rs  test_infer_student_rollout.rs  test_infer_teacher.rs  test_lm.rs  test_metrics.rs  test_opd.rs  test_opd_grad_check.rs  test_opd_step.rs  test_qwen35_loader.rs  test_reward.rs
infer/: Cargo.toml
infer/benches/: ops.rs
infer/benches/ops/: common.rs  ops_cuda_bench.rs
infer/examples/: gptqmodel_w4_gemv_parity.rs  qwen35_dense_module_dump.rs  qwen35_linear_attn_parity.rs  qwen35_linear_attn_substage_dump.rs  qwen35_prefill_path_probe.rs  qwen35_train_vs_infer_parity.rs  raw_token_logits_dump.rs  turboquant_weight_dequant_dump.rs  turboquant_weight_gemv_parity.rs
infer/src/: deepseek_v4_manifest.rs  dispatch_policy.rs  error.rs  http_server.rs  kv_tier.rs  lib.rs  main.rs  metrics.rs  model.rs  model_registry.rs  multiproc_relay.rs  native_deepep.rs  oplib.rs  ops.rs  quant.rs  request_handle.rs  runtime_notify.rs  runtime_topology.rs  scheduler.rs  server_engine.rs  speculative.rs  tensor_parallel.rs  weight_loader.rs
infer/src/backend/: AGENTS.md  cpu.rs  cuda.rs  runtime.rs
infer/src/backend/cuda/: bootstrap.rs  deepep_sidecar.rs
infer/src/backend/metal/: AGENTS.md  dflash.rs  ops.rs  qwen35.rs  request_state.rs  runtime.rs
infer/src/distributed/: init_method.rs  nccl.rs
infer/src/http_server/: AGENTS.md  handlers.rs  preprocess.rs  router.rs  tests.rs  types.rs
infer/src/kv_tier/: AGENTS.md  policy.rs  transport.rs
infer/src/kv_tier/coordinator/: bench.rs
infer/src/metrics/: histogram.rs  render.rs
infer/src/model/: AGENTS.md  deepseek.rs  generation_state.rs  layer_communicator.rs  medusa.rs  qwen35.rs
infer/src/model/deepseek/: batch_decode.rs  config.rs  forward.rs  load.rs  mla.rs  mlp.rs  prefill.rs  reference.rs  state.rs  weights.rs
infer/src/model/medusa/: weights.rs
infer/src/model/qwen3/: batch_decode.rs  forward.rs  prefill.rs  weights.rs
infer/src/model/qwen35/: batch_decode.rs  (+8 more)
infer/src/oplib/: attention.rs  linear.rs
infer/src/ops/: AGENTS.md  attention.rs  elementwise.rs  linear.rs  recurrent.rs  sampling.rs  tests.rs
infer/src/scheduler/: AGENTS.md  cuda.rs  tests.rs  types.rs
infer/src/server_engine/: backend_engine.rs  loaded.rs  request_handle_engine.rs  types.rs
infer/tests/: deepep_sidecar_smoke.rs  dsv4_fp8_kv_pack_parity.rs  dsv4_v4_1b_smoke.rs  engine_offload_parity.rs  forward_token_logits.rs  greedy_consistency.rs  kv_fp8_prefill_logit_parity.rs  kv_precision_parity.rs  kv_precision_parity_qwen35.rs  metal_eval_audit.rs  radix_insert_e2e.rs  scheduler_kv_pressure_drains.rs  spec_decode_correctness.rs  spec_decode_radix_pollution.rs
(+1372 files in other folders)
