[workspace]
members = [
    ".",
    "infer",
    "crates/agent",
    "crates/autograd",
    "crates/chat",
    "crates/cli",
    "crates/cuda-kernels",
    "crates/deepep-sys",
    "crates/deepseek-spec",
    "crates/kv-native-sys",
    "crates/mlx-sys",
    "crates/qwen3-spec",
    "crates/qwen35-spec",
    "crates/tools",
    "crates/train",
    "crates/xgrammar-sys",
]

[workspace.package]
version = "0.1.5"
edition = "2024"
license = "MIT"
publish = false

# Workspace-wide lint posture. Only universally-agreed lints live here; crates
# that want stricter pedantic enforcement (currently only `infer`) opt in via
# their own `[lints.clippy]` block with `pedantic = "warn"`.
[workspace.lints.clippy]
# Default-level lints that this codebase disables because they fire on
# legitimate patterns. See infer/Cargo.toml for the `pedantic`-level allows
# that only apply to the `infer` crate.
too_many_arguments = "allow"
collapsible_if = "allow"
collapsible_else_if = "allow"
# Restriction lints worth enforcing workspace-wide.
dbg_macro = "warn"
exit = "warn"
get_unwrap = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.dependencies]
blake3 = { version = "1", default-features = false, features = ["std"] }
libm = { version = "0.2" }
memmap2 = { version = "0.9" }
postcard = { version = "1", default-features = false, features = ["use-std"] }
safetensors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokenizers = "0.22"
uuid = { version = "1", features = ["v4"] }

[package]
name = "agent-infer"
version = "0.1.5"
edition = "2024"
license = "MIT"
publish = false

[features]
# `cli` is on by default so `cargo build` always produces the `arle` binary.
# Backend is no longer defaulted: pick one explicitly so macOS users do not hit
# the cudarc nvcc requirement (which used to require everyone to type
# `--no-default-features --features metal,no-cuda,cli`):
#   --features cuda            Linux + NVIDIA
#   --features metal,no-cuda   Apple Silicon
#   --features cpu,no-cuda     portable smoke / CI
# `arle --doctor` reports the compiled backend when none is selected.
default = ["cli"]
cli = ["dep:cli"]
cuda = ["cli/cuda"]
# Marker feature for builds without CUDA toolchain (macOS, dev CI).
no-cuda = ["cli/no-cuda"]
# Development-oriented CPU backend. Pair with `no-cuda`.
cpu = ["cli/cpu"]
# Metal backend via mlx-sys (Apple Silicon). Pair with `no-cuda`.
metal = ["cli/metal"]
# NCCL FFI for multi-GPU collectives. Implies `cuda`.
# Forwards through `cli` → `infer` → `cuda-kernels`.
nccl = ["cuda", "cli/nccl"]

[dependencies]
anyhow = "1.0"
cli = { path = "crates/cli", default-features = false, optional = true }

[dev-dependencies]
infer = { path = "infer", default-features = false }
serde_json = { workspace = true }

[[bin]]
name = "arle"
path = "src/main.rs"
required-features = ["cli"]

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1

[profile.release.package."*"]
debug = false

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[lints]
workspace = true
