[package]
autobenches = false
name = "infer"
default-run = "infer"
version = "0.1.5"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
tokenizers = "0.22"
safetensors = "0.7"
anyhow = "1.0"
thiserror = "2"
blake3 = { workspace = true }
# M_d.1 — SHA-256 of tokenizer.json bytes drives the RadixCache namespace.
sha2 = "0.10"
postcard = { workspace = true }
half = { version = "2.4", features = ["num-traits"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
kv-native-sys = { path = "../crates/kv-native-sys" }
cudarc = { version = "0.19", features = [
    "cuda-version-from-build-system",
    "cublas",
    "f16",
], optional = true }
memmap2 = { version = "0.9", optional = true }
# HuggingFace Hub: auto-download model weights + tokenizer by model ID
hf-hub = { version = "0.5", features = ["tokio"] }
# MLX Metal backend (Apple Silicon)
# mlx-sys: direct MLX C API bindings (bindgen). No mlx-rs wrapper.
mlx-sys = { path = "../crates/mlx-sys", optional = true }
# libc: peak RSS via getrusage for metal_bench
libc = { version = "0.2", optional = true }
# NIXL (NVIDIA Inference Transfer Library) — split into an explicit stub dep and
# an explicit real-link dep so `rdma-nixl` and `rdma-nixl-real` are not the same
# Cargo feature under two names.
nixl-sys-stub = { package = "nixl-sys", version = "1.0", optional = true, features = ["stub-api"] }
nixl-sys-real = { package = "nixl-sys", version = "1.0", optional = true }
log = "0.4"
logforth = { version = "0.29", features = ["starter-log", "layout-text", "diagnostic-task-local"] }
colored = "3"
fastrace = { version = "0.7.16", features = ["enable"] }
clap = { version = "4.6.1", features = ["derive"] }
rand = "0.10"
tokio-stream = "0.1"
futures-util = "0.3"
comfy-table = "7.2"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
async-trait = "0.1"
pollster = "0.4"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.0"
opentelemetry = { version = "0.31", default-features = false, features = ["trace"] }
opentelemetry-otlp = { version = "0.31.1", default-features = false, features = ["trace", "http-proto", "reqwest-blocking-client"] }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["trace"] }
chat = { path = "../crates/chat" }
cuda-kernels = { path = "../crates/cuda-kernels", default-features = false }
qwen3-spec = { path = "../crates/qwen3-spec" }
qwen35-spec = { path = "../crates/qwen35-spec" }
deepseek-spec = { path = "../crates/deepseek-spec" }

[features]
# Enable CUDA kernel compilation and GPU inference (default on Linux/GPU machines).
#
# CUDA builds use TileLang as the only AOT attention/GDR compiler surface.
cuda = ["dep:cudarc", "dep:libc", "dep:memmap2", "cuda-kernels/cuda"]
# Disable CUDA – allows compilation on macOS / CI without GPU. GPU ops panic at runtime.
no-cuda = ["cuda-kernels/no-cuda"]
# NCCL FFI for multi-GPU collectives. Implies `cuda` (NCCL needs CUDA).
nccl = ["cuda", "cuda-kernels/nccl"]
# Development-oriented CPU backend for serial smoke tests and local validation.
cpu = ["dep:memmap2"]
# Metal backend via mlx-sys direct C++ bridge (Apple Silicon).
metal = ["dep:mlx-sys", "dep:libc"]
# Default-on rollback gate for the shared scheduler decision IR lowering.
unified_scheduler = []
# Tiered KV cache §P5:
# - `rdma-nixl` = compile against `nixl-sys` stub-api for Mac/dev CI
# - `rdma-nixl-real` = compile against the real native link surface
rdma-nixl = ["dep:nixl-sys-stub"]
rdma-nixl-real = ["dep:nixl-sys-real"]
# No backend default. The default feature set may enable backend-neutral
# runtime gates, but it must not pull in CUDA/Metal link dependencies. macOS
# users (where cudarc cannot link without nvcc) used to have to pass
# `--no-default-features` for every command; that backend footgun is gone. Pick
# a backend explicitly:
#   --features cuda       Linux + NVIDIA
#   --features metal,no-cuda    Apple Silicon
#   --features cpu,no-cuda      portable smoke
default = ["unified_scheduler"]
reference = []

# CUDA-only binaries — skipped under --features metal,no-cuda
[[bin]]
name = "infer"
path = "src/main.rs"
required-features = ["cuda"]

[[bin]]
name = "bench_serving"
path = "src/bin/bench_serving.rs"
required-features = ["cuda"]

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
autograd = { path = "../crates/autograd", default-features = false, features = ["cuda", "safetensors"] }
train = { path = "../crates/train", default-features = false }
base64 = "0.22"
tower = "0.5"
tempfile = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -2 }
# Allowed pedantic lints (too noisy for this codebase)
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_ptr_alignment = "allow"
cast_sign_loss = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
assigning_clones = "allow"
elidable_lifetime_names = "allow"
enum_variant_names = "allow"
large_enum_variant = "allow"
manual_assert = "allow"
manual_checked_ops = "allow"
manual_range_patterns = "allow"
map_unwrap_or = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
needless_range_loop = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
uninlined_format_args = "allow"
unnecessary_wraps = "allow"
unused_self = "allow"
upper_case_acronyms = "allow"
doc_markdown = "allow"
# Cherry-picked nursery lints
redundant_clone = "warn"
unused_peekable = "warn"
# Restriction lints worth enforcing (duplicated from workspace so the rest
# still fire when pedantic is on)
dbg_macro = "warn"
exit = "warn"
get_unwrap = "warn"
print_stdout = "allow"
print_stderr = "allow"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unreachable_pub = "warn"

[[bin]]
name = "metal_bench"
path = "src/bin/metal_bench.rs"
required-features = ["metal"]

[[bin]]
name = "metal_request"
path = "src/bin/metal_request.rs"
required-features = ["metal"]

[[bin]]
name = "metal_serve"
path = "src/bin/metal_serve.rs"
required-features = ["metal"]

[[bin]]
name = "cpu_serve"
path = "src/bin/cpu_serve.rs"
required-features = ["cpu"]

[[example]]
name = "regenerate_test_data"
path = "examples/regenerate_test_data.rs"
required-features = ["cuda"]

[[bench]]
name = "tokenizer_bench"
harness = false

[[bench]]
name = "ops_bench"
harness = false
required-features = ["cuda"]
