[package]
name = "autograd"
version = "0.1.5"
edition = "2024"
license = "MIT"
publish = false

[features]
default = []
no-cuda = []
# Metal backend (Apple Silicon) via mlx-sys C++ bridge. Host Vec<f32> stays
# authoritative; backend uploads per call, computes `mlx_matmul`, downloads.
metal = ["dep:mlx-sys"]
# CUDA backend via cudarc cuBLAS SGEMM. Same per-call upload/download model.
# PENDING REMOTE CUDA VERIFICATION — user validates on GPU box.
cuda = ["dep:cudarc"]
safetensors = ["dep:safetensors", "dep:memmap2", "dep:half"]

[dependencies]
anyhow = "1.0"
cudarc = { version = "0.19", features = [
    "cuda-version-from-build-system",
    "cublas",
    "nvrtc",
], optional = true }
half = { version = "2", optional = true }
libm.workspace = true
memmap2 = { workspace = true, optional = true }
mlx-sys = { path = "../mlx-sys", optional = true }
safetensors = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
