[package]
name = "autograd"
version = "0.1.5"
edition = "2024"
license = "MIT"
publish = false

[features]
default = []
no-cuda = []
# Metal backend (Apple Silicon) via mlx-sys C++ bridge. Host Vec<f32> stays
# authoritative; backend uploads per call, computes `mlx_matmul`, downloads.
metal = ["dep:mlx-sys"]
# CUDA backend via cudarc cuBLAS SGEMM. Same per-call upload/download model.
# PENDING REMOTE CUDA VERIFICATION — user validates on GPU box.
cuda = ["dep:cudarc"]
safetensors = ["dep:safetensors", "dep:memmap2", "dep:half"]

[dependencies]
anyhow = "1.0"
cudarc = { version = "0.19", features = [
    "cuda-version-from-build-system",
    "cublas",
    "nvrtc",
], optional = true }
half = { version = "2", optional = true }
libm.workspace = true
# Hand-tuned AVX2/SSE2 single-threaded f32 sgemm. cpu_matmul_forward and
# cpu_matmul_backward route every rank-2 / rank-3 tile through
# matrixmultiply::sgemm so the CPU training substrate gets packed-tile cache
# reuse instead of the autovec scalar saxpy ceiling. See
# docs/experience/wins/2026-05-19-bench-cpu-matmul-* for the licensing chain.
matrixmultiply = "0.3"
memmap2 = { workspace = true, optional = true }
mlx-sys = { path = "../mlx-sys", optional = true }
safetensors = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
