[package]
name = "cli"
version = "0.1.5"
edition = "2024"
license = "MIT"
publish = false

[features]
# No backend default — pick one explicitly:
#   --features cuda            Linux + NVIDIA
#   --features metal,no-cuda   Apple Silicon
#   --features cpu,no-cuda     portable smoke
default = []
cuda = ["infer/cuda", "train/cuda", "autograd/cuda"]
no-cuda = ["infer/no-cuda", "train/no-cuda", "autograd/no-cuda"]
cpu = ["infer/cpu"]
metal = ["infer/metal", "train/metal", "autograd/metal"]
nccl = ["cuda", "infer/nccl"]

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
console = "0.16"
ctrlc = "3"
dialoguer = "0.11"
hf-hub = { version = "0.5", features = ["tokio"] }
indicatif = "0.18"
agent = { path = "../agent" }
autograd = { path = "../autograd", default-features = false }
chat = { path = "../chat" }
infer = { path = "../../infer", default-features = false }
deepseek-spec = { path = "../deepseek-spec" }
qwen3-spec = { path = "../qwen3-spec" }
qwen35-spec = { path = "../qwen35-spec" }
thiserror = { workspace = true }
train = { path = "../train", default-features = false }
tools = { path = "../tools" }
log = "0.4"
nucleo-matcher = "0.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rustyline = "15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.35"
tokio = { version = "1", features = ["sync"] }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
