[package]
name = "cuda-kernels"
version = "0.1.5"
edition = "2024"
license = "MIT"
publish = false

[features]
# CUDA builds use TileLang as the only AOT attention/GDR compiler surface.
cuda = ["dep:cudarc"]
no-cuda = []
# F0: declare NCCL FFI symbols only. Linking happens in F1 via build.rs.
# Implies `cuda` because `crate::ffi::nccl` lives under `crate::ffi` which
# is itself gated on `cuda` (matching reality: NCCL requires CUDA).
nccl = ["cuda"]

[dependencies]
anyhow = "1.0"
half = { version = "2.4", features = ["num-traits"] }
log = "0.4"
cudarc = { version = "0.18", features = [
    "cuda-version-from-build-system",
    "cublas",
    "f16",
], optional = true }

[build-dependencies]
cc = "1.0"

[lints]
workspace = true
