[package]
name = "train"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
# train CLI commands live in `src/commands/` and are dispatched in-process
# via `arle train ...` / `arle data ...` (see `crates/cli/src/train_cli.rs`,
# which calls `train::commands::*::dispatch_from_args`). The standalone
# `[[bin]]` targets that previously shipped `pretrain` / `train_sft` /
# `train_grpo` / `train_multi_turn` / `eval_lm` / `download_dataset` /
# `convert_dataset` are intentionally removed; autobins stays disabled so
# Cargo does not rediscover anything as a binary.
autobins = false

[features]
default = []
no-cuda = ["autograd/no-cuda"]
metal = ["autograd/metal"]
cuda = ["autograd/cuda"]

[dependencies]
autograd = { path = "../autograd", default-features = false, features = ["safetensors"] }
anyhow = "1.0"
hf-hub = { version = "0.5", features = ["tokio"] }
opentelemetry = { version = "0.31", default-features = false, features = ["logs"] }
opentelemetry-otlp = { version = "0.31.1", default-features = false, features = ["logs", "http-proto", "reqwest-blocking-client"] }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["logs"] }
half = "2"
memmap2 = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokenizers = { workspace = true }
ureq = { version = "2.12", features = ["json"] }
qwen3-spec = { path = "../qwen3-spec" }
qwen35-spec = { path = "../qwen35-spec" }
deepseek-spec = { path = "../deepseek-spec" }
chat = { path = "../chat" }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
